--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "keebo",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -8,7 +8,7 @@
     "build-storybook": "storybook build",
     "build": "tsc"
   },
-  "keywords": [],
+  "keywords": ["components","ui","tailwind","keebo"],
   "author": "subhampreet",
   "license": "ISC",
   "description": "A CLI for adding components to your project",
