--- a/package.json
+++ b/package.json
@@ -1,20 +1,38 @@
 {
   "name": "keebo",
-  "version": "1.0.4",
-  "main": "index.js",
+  "version": "1.1.5",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist/**/*"
+  ],
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.js"
+    },
+    "./package.json": "./package.json"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "build": "tsc"
   },
-  "keywords": ["components","ui","tailwind","keebo"],
+  "keywords": [
+    "components",
+    "ui",
+    "tailwind",
+    "keebo"
+  ],
   "author": "subhampreet",
   "license": "ISC",
   "description": "A CLI for adding components to your project",
   "dependencies": {
     "classnames": "^2.5.1",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
